the first vesion

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,10 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+#npm
+node_modules/
+npm-debug.log
 
-# Precompiled Headers
-*.gch
-*.pch
+#build
+build/
+dist/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+#osx
+.DS_Store
